# ephpm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  ephpm.toml  install.ps1  install.sh  rustfmt.toml
.claude/: settings.json  settings.local.json
.claude/agents/: ephpm-systems-architect.md
.github/: release-readme.txt
.github/workflows/: builder-smoke.yml  ci-image.yml  ci.yml  docs.yml  e2e.yml  helm.yml  k8s-e2e.yml  nightly.yml  php-sdk.yml  release.yml  sdk-bump.yml
benches/: throughput.rs
charts/ephpm/: Chart.yaml  values.yaml
crates/ephpm/: Cargo.toml  build.rs
crates/ephpm-cluster/: Cargo.toml
crates/ephpm-cluster/src/: cluster_channel.rs  clustered_store.rs  gossip_kv.rs  kv_data_plane.rs  lib.rs  node.rs  secure_transport.rs  sqlite_election.rs
crates/ephpm-cluster/tests/: clustered_store.rs  gossip.rs  gossip_formation.rs  kv_replication.rs  kv_replicator_seam.rs  secure_gossip.rs  stress.rs
crates/ephpm-config/: Cargo.toml
crates/ephpm-config/src/: lib.rs
crates/ephpm-db/: Cargo.toml
crates/ephpm-db/src/: duration.rs  error.rs  lib.rs  mysql.rs  pool.rs  postgres.rs  url.rs
crates/ephpm-db/tests/: duration_parsing.rs  pg_proxy_integration.rs  pool_lifecycle.rs  proxy_integration.rs  reset_strategy.rs  url_parsing.rs
crates/ephpm-e2e/: Cargo.toml
crates/ephpm-e2e/src/: lib.rs
crates/ephpm-e2e/tests/: bare_process_smoke.rs  basic.rs  brotli.rs  cluster.rs  compression_thresholds.rs  concurrency.rs  connection_limits.rs  custom_headers.rs  errors.rs  etag_cache.rs  extensions.rs  file_cache.rs  header_limits.rs  hidden_files.rs  hidden_files_allow.rs  hrana.rs  http.rs  http_edge.rs  idle_timeout.rs  kv.rs  kv_advanced.rs  kv_unix_socket.rs  metrics.rs  opcache_invalidation.rs  per_request_isolation.rs  php.rs  php_config.rs  php_extended.rs  phpinfo.rs  postgres_proxy.rs  query_stats.rs  rate_limit.rs  rw_split.rs  security.rs  security_p0.rs  session_locking.rs  sqlite.rs  sqlite_advanced.rs  tds_proxy.rs  timeout_edge.rs  (+4 more)
crates/ephpm-e2e/tests/fixtures/: ext-probe.php
crates/ephpm-kv/: Cargo.toml
crates/ephpm-kv/src/: auth.rs  command.rs  lib.rs  multi_tenant.rs  server.rs
crates/ephpm-kv/src/resp/: frame.rs  mod.rs  parse.rs
crates/ephpm-kv/src/store/: entry.rs  mod.rs  watch.rs
crates/ephpm-kv/tests/: resp_compat.rs  stress.rs  write_overhead.rs
crates/ephpm-middleware/: Cargo.toml
crates/ephpm-middleware-builtins/: Cargo.toml
crates/ephpm-middleware-builtins/src/: cors.rs  jwt.rs  lib.rs  ratelimit.rs  security_headers.rs
crates/ephpm-middleware-cors/: Cargo.toml
crates/ephpm-middleware-cors/src/: lib.rs
crates/ephpm-middleware-jwt/: Cargo.toml
crates/ephpm-middleware-jwt/src/: lib.rs
crates/ephpm-middleware-ratelimit/: Cargo.toml
crates/ephpm-middleware-ratelimit/src/: lib.rs
crates/ephpm-middleware-ratelimit/tests/: fail_open.rs
crates/ephpm-middleware-security-headers/: Cargo.toml
crates/ephpm-middleware-security-headers/src/: lib.rs
crates/ephpm-middleware/src/: abi.rs  builtin.rs  host.rs  lib.rs
crates/ephpm-php/: Cargo.toml  build.rs  cpu_compat.c  ephpm_wrapper.c  resolver_shim.c  wrapper.h
crates/ephpm-php/src/: kv_bridge.rs  lib.rs  request.rs  response.rs  sapi.rs  windows_dll.rs  worker_bridge.rs
crates/ephpm-php/tests/: sessions.rs
crates/ephpm-query-stats/: Cargo.toml
crates/ephpm-query-stats/src/: digest.rs  lib.rs
crates/ephpm-query-stats/tests/: stress.rs
crates/ephpm-server/: Cargo.toml
crates/ephpm-server/src/: acme.rs  body.rs  file_cache.rs  idle.rs  lib.rs  metrics.rs  middleware.rs  opcache.rs  rate_limit.rs  router.rs  static_files.rs  stream_compress.rs  tls.rs  tracked_backend.rs  turso_cdc.rs  worker_pool.rs
crates/ephpm-server/tests/: turso_cdc_cluster_integration.rs  turso_cdc_e2e.rs  turso_cdc_snapshot_bootstrap.rs
crates/ephpm-sqld/: Cargo.toml  build.rs
crates/ephpm-sqld/src/: lib.rs
crates/ephpm/src/: main.rs
crates/ephpm/src/commands/: ext.rs
crates/ephpm/src/service/: launchd.rs  mod.rs  systemd.rs  windows.rs
crates/ephpm/tests/: kv_sapi_integration.rs  service_lifecycle.rs  vhost_routing.rs
deploy/chart/: Chart.yaml  values.yaml
docker/: Dockerfile  Dockerfile.builder  Dockerfile.e2e  Dockerfile.gha  Dockerfile.php-sdk  builder-entrypoint.sh  docker-compose.smoke.yml
docs/: turso-gate5-results.md  turso-phase1-results.md  turso-phase2-cdc-design.md
docs/analysis/: caddy.md  certmagic.md  frankenphp.md  laravel-octane.md  monetization.md  overview.md  performance-comparison.md  popularity.md  roadrunner.md  swoole.md
docs/architecture/: architecture.md  build-compose-design.md  cli.md  clustering.md  db-proxy.md  dynamic-baseline-design.md  edge.md  ephpm-architecture.md  future-improvements.md  http.md  implementation.md  metrics.md  preview.md  query-stats.md  security.md  sql.md  testing.md  vercel.md  vhosts.md  webserver-feature-parity.md  worker-mode-design.md  worker-mode-roadmap.md
docs/developer/: getting-started.md  testing.md
docs/features/: sessions.md
docs/guides/: wordpress.md
docs/migration/: apache-mod-php.md  nginx-php-fpm.md
docs/testing/: e2e.md  nightly.md  unit.md
examples/: README-KV.md  kv-redis-predis.php  kv-sapi-basic.php
examples/wordpress-compose/: .gitignore  compose.yaml  ephpm.toml  wp-config.php
examples/wordpress-embedded-cache/: .gitignore  README.md  compose.yaml  ephpm.toml  wp-config.php
fuzz/: Cargo.toml
fuzz/corpus/fuzz_resp_parser/: crash-b641210242cd3065794a600ec1da035d934c6c51
fuzz/corpus/mysql_classifier/: delete  explain  insert  select_for_update  update  whitespace_prefix
fuzz/corpus/mysql_parse_stmt_id/: execute_big_id
fuzz/corpus/resp_parser/: array_set  simple_err
fuzz/corpus/sql_normalizer/: backtick_idents  insert_literals  select_in_list  update_hex  with_comments
fuzz/fuzz_targets/: mysql_classifier.rs  mysql_parse_stmt_id.rs  resp_parser.rs  sql_normalizer.rs
k8s/: Tiltfile  kind-config.yaml
scripts/: e2e-test.sh
site/: hugo.toml
tests/: ephpm-test.toml
xtask/: Cargo.toml
(+244 files in other folders)
