[workspace]
members = ["crates/*", "xtask"]
default-members = ["crates/*"]
exclude = ["crates/ephpm-e2e"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/user/ephpm"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
tower = { version = "0.5", features = ["full"] }
serde = { version = "1", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
flate2 = "1"
brotli = "7"
zstd = "0.13"
ipnet = "2"
tracing-appender = "0.2"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-acme = { version = "0.15", default-features = false, features = ["tokio", "aws-lc-rs", "tls12", "webpki-roots"] }
tokio-stream = "0.1"
tempfile = "3"
temp-env = "0.3"
serial_test = "3"
dashmap = "6"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
md5 = "0.8"
base64ct = { version = "1", features = ["alloc"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }

# Internal crates
ephpm-config = { path = "crates/ephpm-config" }
ephpm-db = { path = "crates/ephpm-db" }
ephpm-kv = { path = "crates/ephpm-kv" }
ephpm-php = { path = "crates/ephpm-php" }
ephpm-server = { path = "crates/ephpm-server" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
