[workspace]
members = ["crates/*", "xtask"]
default-members = ["crates/*"]
exclude = ["crates/ephpm-e2e"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ephpm/ephpm"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
http = "1"
tower = { version = "0.5", features = ["full"] }
serde = { version = "1", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
flate2 = "1"
brotli = "7"
zstd = "0.13"
ipnet = "2"
tracing-appender = "0.2"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-acme = { version = "0.15", default-features = false, features = ["tokio", "aws-lc-rs", "tls12", "webpki-roots"] }
tokio-stream = "0.1"
tempfile = "3"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
temp-env = "0.3"
serial_test = "3"
dashmap = "6"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
md5 = "0.8"
base64ct = { version = "1", features = ["alloc"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }
chitchat = "0.10"
serde_json = "1"
async-trait = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Internal crates
ephpm-cluster = { path = "crates/ephpm-cluster" }
ephpm-config = { path = "crates/ephpm-config" }
ephpm-db = { path = "crates/ephpm-db" }
ephpm-kv = { path = "crates/ephpm-kv" }
ephpm-php = { path = "crates/ephpm-php" }
ephpm-query-stats = { path = "crates/ephpm-query-stats" }
ephpm-server = { path = "crates/ephpm-server" }
ephpm-sqld = { path = "crates/ephpm-sqld" }

# External — litewire (embedded SQLite wire protocol proxy)
#
# Pinned to a specific commit so builds are reproducible. To bump, replace `rev`
# with the new commit hash and run `cargo update -p litewire`.
#
# For local development against a sibling litewire checkout, add to your local
# (gitignored) .cargo/config.toml:
#
#   [patch."https://github.com/ephpm/litewire.git"]
#   litewire = { path = "../litewire/crates/litewire" }
litewire = { git = "https://github.com/ephpm/litewire.git", rev = "33e24a3e6fe664b1be499a0147c9cae5756eb733", default-features = false, features = ["mysql", "postgres", "tds", "hrana", "backend-rusqlite", "backend-hrana-client"] }

[workspace.lints.rust]
unsafe_code = "warn"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(php_linked)'] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow noisy pedantic lints
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
manual_clamp = "allow"
manual_let_else = "allow"
needless_pass_by_value = "allow"
ref_option = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
unchecked_time_subtraction = "allow"
ignore_without_reason = "allow"
uninlined_format_args = "allow"
unnecessary_cast = "allow"
unused_async = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
