[package]
name = "ephpm-cluster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Gossip-based clustering for ePHPm"

[dependencies]
chitchat.workspace = true
dashmap.workspace = true
ephpm-config.workspace = true
ephpm-kv.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
base64ct.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
