[package]
name = "ephpm-kv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded KV store with RESP protocol for ePHPm"

[dependencies]
ephpm-config.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
# `raw-api` exposes DashMap's inner shards so LRU eviction can sample keys
# from random shards (O(sample_size), never O(n)) instead of always walking
# the map from the front. Pinned dashmap 6.x; see store::sample_oldest.
dashmap = { workspace = true, features = ["raw-api"] }
parking_lot.workspace = true
bytes.workspace = true
flate2.workspace = true
brotli.workspace = true
zstd.workspace = true
hmac.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
redis.workspace = true
tokio.workspace = true

[lints]
workspace = true
