[package]
name = "ephpm-middleware-security-headers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ePHPm native middleware: standard security response headers"

[lib]
# cdylib = the loadable module; rlib so unit tests can call the type directly.
crate-type = ["cdylib", "rlib"]

[dependencies]
ephpm-middleware.workspace = true
serde_json.workspace = true

[dev-dependencies]
ephpm-middleware = { workspace = true, features = ["host"] }

[lints]
workspace = true
