[package]
name = "ephpm-php"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PHP embedding via libphp FFI for ePHPm"
build = "build.rs"

[dependencies]
ephpm-kv.workspace = true
tracing.workspace = true
thiserror.workspace = true
http.workspace = true
# Worker mode: async-producer / sync-consumer dispatch queue (async_channel
# speaks both send().await and recv_blocking()) plus oneshot response return.
async-channel.workspace = true
tokio = { workspace = true, features = ["sync"] }

[build-dependencies]
bindgen = "0.72"
cc = "1"

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true

[lints]
workspace = true
