[package]
name = "ephpm-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP server for ePHPm"

[dependencies]
ephpm-config.workspace = true
ephpm-db.workspace = true
ephpm-kv.workspace = true
ephpm-php.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
mime_guess.workspace = true
tracing.workspace = true
flate2.workspace = true
ipnet.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
rustls-acme.workspace = true
tokio-stream.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
litewire = { workspace = true, optional = true }

[features]
default = ["litewire"]
litewire = ["dep:litewire"]

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
