[package]
name = "ephpm-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP server for ePHPm"

[dependencies]
async-trait.workspace = true
ephpm-cluster.workspace = true
ephpm-config.workspace = true
ephpm-db.workspace = true
ephpm-kv.workspace = true
ephpm-middleware = { workspace = true, features = ["host"] }
# Builtin middleware registry: the four in-tree module implementations
# linked in as a plain rlib (no C ABI exports), so `library = "jwt"` works
# in every binary — including custom fully static builds, where dlopen
# does not exist.
ephpm-middleware-builtins.workspace = true
ephpm-php.workspace = true
ephpm-query-stats.workspace = true
ephpm-sqld.workspace = true
litewire.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
mime_guess.workspace = true
tracing.workspace = true
brotli.workspace = true
flate2.workspace = true
ipnet.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
rustls-acme.workspace = true
tokio-stream.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
dashmap.workspace = true
libloading.workspace = true
serde_json.workspace = true
serde = { workspace = true }
base64ct = { workspace = true }
tokio-util.workspace = true
bytes.workspace = true
sha2.workspace = true
async-channel.workspace = true

[dev-dependencies]
tempfile.workspace = true
rcgen.workspace = true
# Paused-clock (`start_paused`) support for the idle-timeout watchdog tests.
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
