[package]
name = "ephpm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "All-in-one PHP application server"

[[bin]]
name = "ephpm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
ephpm-config.workspace = true
ephpm-db.workspace = true
ephpm-kv.workspace = true
ephpm-php.workspace = true
ephpm-server.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["litewire"]
litewire = ["ephpm-server/litewire"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
