[package]
name = "ephpm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "All-in-one PHP application server"

[[bin]]
name = "ephpm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
ephpm-config.workspace = true
ephpm-db.workspace = true
ephpm-kv.workspace = true
ephpm-php.workspace = true
ephpm-server.workspace = true
# mimalloc as the global allocator for the ephpm binary.
#
# Wins in workloads with many small, short-lived allocations (HTTP request
# frames, RESP command payloads, MySQL packet vecs, litewire query buffers) —
# the default system allocator has measurable contention under concurrent
# tokio task load. Default features only (no `secure` — that adds tag
# checks intended for adversarial-heap workloads at a real perf cost).
#
# Applied only at the binary crate level so downstream test/dev tooling
# (unit tests, xtask, doc builds) uses the standard allocator and doesn't
# introduce platform-specific surprises in CI. Windows-supported (bundled
# in the mimalloc crate's build.rs).
mimalloc = { version = "0.1", default-features = false }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
